# home-assistant-covid19-augsburg

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: python-app.yml
custom_components/home_assistant_covid19_augsburg/: __init__.py  config_flow.py  const.py  crawler.py  main.py  manifest.json  sensor.py  services.yaml
tests/: test_example.py
